# reth

./: Cargo.toml
.github/workflows/: build.yml  build_reth.yml
crates/chain-state/src/: in_memory.rs  notifications.rs  test_utils.rs
crates/chainspec/src/: spec.rs
crates/cli/commands/src/: import.rs
crates/consensus/common/src/: validation.rs
crates/e2e-test-utils/src/: node.rs
crates/engine/service/: Cargo.toml
crates/engine/service/src/: service.rs
crates/engine/tree/src/: backfill.rs  download.rs  engine.rs
crates/engine/util/src/: reorg.rs
crates/ethereum-forks/src/: forkcondition.rs
crates/ethereum-forks/src/hardfork/: ethereum.rs
crates/ethereum/consensus/src/: lib.rs  validation.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: execute.rs
crates/ethereum/node/src/: node.rs
crates/ethereum/payload/src/: lib.rs
crates/ethereum/primitives/src/: receipt.rs  transaction.rs
crates/evm/: Cargo.toml
crates/evm/execution-errors/src/: trie.rs
crates/evm/execution-types/src/: chain.rs  execution_outcome.rs
crates/evm/src/: either.rs  lib.rs  metrics.rs
crates/evm/src/system_calls/: eip2935.rs  eip4788.rs
crates/exex/exex/src/: manager.rs  notifications.rs
crates/net/discv4/src/: lib.rs
crates/net/downloaders/src/: file_client.rs  receipt_file_client.rs
crates/net/ecies/: Cargo.toml
crates/net/eth-wire-types/src/: broadcast.rs
crates/net/eth-wire/src/: ethstream.rs
crates/net/network/src/: error.rs  peers.rs  state.rs
crates/net/p2p/src/: error.rs  full_block.rs
crates/node/builder/: Cargo.toml
crates/node/events/src/: node.rs
crates/optimism/cli/src/: receipt_file_codec.rs
crates/optimism/consensus/src/: lib.rs  proof.rs
crates/optimism/evm/src/: execute.rs  l1.rs
crates/optimism/hardforks/src/: hardfork.rs
crates/optimism/node/src/: engine.rs  txpool.rs
crates/optimism/payload/src/: builder.rs
crates/optimism/primitives/src/: receipt.rs
crates/optimism/rpc/src/: error.rs
crates/payload/validator/src/: lib.rs
crates/primitives-traits/src/: account.rs  size.rs
crates/primitives-traits/src/block/: recovered.rs  sealed.rs
crates/revm/src/: batch.rs  cached.rs
crates/rome/evm/: Cargo.toml
crates/rome/evm/src/: config.rs  execute.rs  lib.rs
crates/rome/node/: Cargo.toml
crates/rome/node/src/: lib.rs  node.rs  payload.rs
crates/transaction-pool/src/: config.rs  error.rs  lib.rs  maintain.rs  noop.rs  traits.rs
docker/: Dockerfile
docker/cfg/: client-config.json  config.json
examples/beacon-api-sidecar-fetcher/src/: mined_sidecar.rs
examples/custom-engine-types/src/: main.rs
examples/db-access/src/: main.rs
examples/stateful-precompile/src/: main.rs
testing/ef-tests/src/: models.rs
testing/testing-utils/src/: generators.rs
(+117 files in other folders)
