[package]
name = "reth-rome-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives.workspace = true
reth-ethereum-consensus.workspace = true
reth-consensus.workspace = true
revm.workspace = true

# Ethereum
revm-primitives.workspace = true
reth-primitives-traits.workspace = true

# Solana
rome-sdk.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-consensus.workspace = true

# Misc
serde.workspace = true
