[package]
name = "reth-rome-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eyre = {workspace = true}

# reth
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-network = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-provider = { workspace = true }
reth-rpc = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-builder = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-server-types = { workspace = true }
reth-tracing = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-trie-db = { workspace = true }
revm = {workspace = true}

[features]
rome = []
